# SchurVINS

./: .gitignore
logs/: imu_traj.txt
rpg_common/: CMakeLists.txt
rqt_svo/: CMakeLists.txt
svo/: CMakeLists.txt
svo/src/: schur_vins.cpp
svo_benchmarking/: CMakeLists.txt
svo_ceres_backend/: CMakeLists.txt
svo_cmake/cmake/Modules/: SvoSetup.cmake
svo_common/: CMakeLists.txt
svo_common/src/: frame.cpp
svo_direct/: CMakeLists.txt
svo_direct/src/: matcher.cpp
svo_global_map/: CMakeLists.txt
svo_img_align/: CMakeLists.txt
svo_msgs/: CMakeLists.txt
svo_online_loopclosing/: CMakeLists.txt
svo_pgo/: CMakeLists.txt
svo_ros/: CMakeLists.txt  rviz_config.rviz
svo_ros/launch/: realsense_vio_stereo.launch  test_vio_stereo.launch  tum_vio_stereo.launch  zed_vio_stereo.launch
svo_ros/param/: realsense_stereo.yaml  test_stereo.yaml  tum_stereo.yaml  zed_stereo.yaml
svo_ros/param/calib/: realsense_stereo.yaml  test_stereo.yaml  tum_stereo.yaml  zed_stereo.yaml
svo_ros/src/: svo_interface.cpp
svo_test_utils/: CMakeLists.txt
svo_tracker/: CMakeLists.txt
svo_tracker/src/: feature_tracker.cpp
svo_vio_common/: CMakeLists.txt
